# scmt

./: CMakeLists.txt  README
data/: C1FFL.m  NegativeAutoregulation.h  NegativeAutoregulation.m  PositiveAutoregulation.h  PositiveAutoregulation.m  TwoGenesCascade.h  TwoGenesCascade.m
data/matlab/: hillFunction.m
data/matlabFn/: logicGate.m
docs/: glossary.tex  literatureReview.tex
docs/notebook/: 2011_11_01_nervousSystem  2011_11_04_cellMl  2011_11_05_nextDB  2011_11_06_genetics  2011_11_06_genome  2011_11_06_genomics  2011_11_2_wormbase  2011_11_3_cellLineage
prototypes/: Autoregulation.h  Autoregulation.m  FFL.m  SIM.m  multiOutputFFL.m
prototypes/matlabFn/: stepFunction.m
src/: Autoregulation.h  CMakeLists.txt  DataGraph.cpp  DataGraph.h  Edge.cpp  Edge.h  Gene.cpp  Gene.h  Globals.h  Globals.h.cmake  InputType.h  Network.cpp  Network.h  Numerical.h  Signal.cpp  Signal.h  TwoGenesCascade.m  main.cpp
src/matlab/: activityLevel.m
